# say-hello-to-rust

./: .editorconfig  .gitignore  Cargo.toml  devshell.toml  flake.nix  treefmt.toml
src/: main.rs
