[package]
name = "say-hello-to-rust"
version = "0.1.0"
edition = "2021"


[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]

[package.metadata.nix.crateOverride.openssl-sys]
nativeBuildInputs = ["pkgconfig"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.11.10"
tokio = { version = "1.19.0", features = ["full"] }
